# CompanionWinRT

./: .gitmodules  CMakeLists.txt  README.md
CompanionWinRT/: CMakeLists.txt  Configuration.cpp  Configuration.h
CompanionWinRT/algo/: CPUFeatureMatching.cpp  CPUFeatureMatching.h
CompanionWinRT/algo/2D/: FeatureMatching.h
CompanionWinRT/algo/detection/: ShapeDetection.cpp  ShapeDetection.h
CompanionWinRT/algo/recognition/hashing/: LSH.cpp  LSH.h
CompanionWinRT/algo/recognition/matching/: FeatureMatching.cpp  FeatureMatching.h
CompanionWinRT/draw/: Frame.cpp  Frame.h
CompanionWinRT/input/: ImageStream.cpp  ImageStream.h
CompanionWinRT/model/: FeatureMatchingModel.cpp  FeatureMatchingModel.h
CompanionWinRT/model/processing/: FeatureMatchingModel.cpp  FeatureMatchingModel.h
CompanionWinRT/model/result/: Result.cpp  Result.h
CompanionWinRT/processing/2D/: ObjectDetection.cpp  ObjectDetection.h
CompanionWinRT/processing/detection/: ObjectDetection.cpp  ObjectDetection.h
CompanionWinRT/processing/recognition/: HashRecognition.cpp  HashRecognition.h  HybridRecognition.cpp  HybridRecognition.h  MatchRecognition.cpp  MatchRecognition.h
CompanionWinRT/utils/: CompanionError.h  CompanionUtils.cpp  CompanionUtils.h
companionWinRT/: CMakeLists.txt  Configuration.cpp  Configuration.h
companionWinRT/algo/: CPUFeatureMatching.cpp  CPUFeatureMatching.h
companionWinRT/algo/2D/: FeatureMatching.cpp  FeatureMatching.h
companionWinRT/draw/: Frame.h
companionWinRT/input/: ImageStream.cpp  ImageStream.h
companionWinRT/model/result/: Result.h
companionWinRT/processing/2D/: ObjectDetection.cpp  ObjectDetection.h
companionWinRT/utils/: CompanionError.h  CompanionUtils.cpp  CompanionUtils.h
doc/: doxygen.conf
samples/CompanionUWPSample/: App.xaml  App.xaml.cs  CompanionUWPSample.csproj  CompanionUWPSample_TemporaryKey.pfx  MainPage.xaml  MainPage.xaml.cs  Package.appxmanifest
samples/CompanionUWPSample/Properties/: AssemblyInfo.cs
